upgrade:: handle endpoint verify forgot password
